spotme-rest-svc/overlays/dev/spotme-rest-patch-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotme-rest
  annotations:
      strategy.spinnaker.io/recreate: 'true'
  labels:
    app: spotme-rest
    type: back-end
spec:
  template:
    metadata:
      name: spotme-rest
      labels:
        app: spotme-rest
        type: back-end
        project: spotme
    spec:
      containers:
        - name: spotme-rest
          image: containerregistry.spot-me-app.com/spotme/spotme-rest:develop
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1000Mi"
              cpu: "500m"
            limits:
              memory: "3000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: jfrog-dev
  replicas: 1
  selector:
    matchLabels:
      app: spotme-rest
