spotme-rest-svc/overlays/dev/spotme-rest-service-dev.yml
apiVersion: v1
kind: Service
metadata:
    name: ${appname}-svc
    annotations:
      strategy.spinnaker.io/recreate: 'true'
spec:
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30280
  selector:
    appName: ${appname}
