spotme-rest-svc/overlays/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${parameters['appname']}-ingress
  annotations:
    kubernetes.io/ingress.class: public
spec:
  ingressClassName: public
  rules:
    - host: ${parameters['appname']}.${parameters['cluster']}.magus.lab
      http:
        paths:
          - path: /auth-ingress
            pathType: Prefix
            backend:
              service:
                name: spotme-auth-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotme-auth-svc
                port:
                  number: 80
